[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/Adventurer Sprite Sheet v1.1.png" type="Texture" id=1]
[ext_resource path="res://src/actors/Manu.gd" type="Script" id=2]
[ext_resource path="res://src/objects/HealthBar.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.11362
height = 4.16348

[sub_resource type="Animation" id=2]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 0.466517, 2.54912, 0.5, 1 ),
"update": 1,
"values": [ 78, 79, 80, 81, 78 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.901961, 0.054902, 0.054902, 1 ), Color( 1, 0.305882, 0.305882, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle_left"
length = 1.02
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115 ]
}

[sub_resource type="Animation" id=4]
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.2, 0.25, 0.35, 0.45, 0.55, 0.65, 0.75, 0.85, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=5]
resource_name = "jump_down_left"
length = 0.35
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 172, 171, 170, 169 ]
}

[sub_resource type="Animation" id=6]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 69, 68, 67, 66 ]
}

[sub_resource type="Animation" id=7]
resource_name = "jump_up_left"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 170, 171, 172, 173, 174 ]
}

[sub_resource type="Animation" id=8]
length = 2.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 66, 67, 68, 69 ]
}

[sub_resource type="Animation" id=9]
resource_name = "walk_left"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 116, 117, 118, 119, 120, 121, 124 ]
}

[sub_resource type="Animation" id=10]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 18, 19 ]
}

[sub_resource type="CapsuleShape2D" id=11]
radius = 9.97371
height = 4.29621

[node name="Manu" type="KinematicBody2D"]
position = Vector2( -1.12943, -5.11963 )
collision_mask = 8
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" parent="CanvasLayer" instance=ExtResource( 3 )]
margin_left = -1.12943
margin_top = 4.39398
margin_right = 38.8706
margin_bottom = 44.394

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.30283, 4.56611 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 16
hframes = 13
frame = 144

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/hurt = SubResource( 2 )
anims/idle_left = SubResource( 3 )
anims/idle_right = SubResource( 4 )
anims/jump_down_left = SubResource( 5 )
anims/jump_down_right = SubResource( 6 )
anims/jump_up_left = SubResource( 7 )
anims/jump_up_right = SubResource( 8 )
anims/walk_left = SubResource( 9 )
anims/walk_right = SubResource( 10 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, 9.51361 )
current = true
limit_left = 0
limit_top = 0
limit_right = 752
limit_bottom = 208
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_right = 0.0
editor_draw_limits = true

[node name="EnemyDetector" type="Area2D" parent="."]
position = Vector2( -4.39576, 3.88541 )
monitorable = false
collision_layer = 2147483648
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
modulate = Color( 0.113725, 0.239216, 0.662745, 1 )
position = Vector2( 2.18055, 0.86259 )
shape = SubResource( 11 )
[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_area_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
